Part1/Exercise_1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 3012
      protocol: TCP
      targetPort: 8088
